--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,257 @@
-annotated-types==0.7.0
-anyio==4.8.0
-certifi==2025.1.31
-charset-normalizer==3.4.1
-fastapi==0.115.10
-idna==3.10
-pydantic==2.10.6
-pydantic_core==2.27.2
+alembic==1.12.0
+amqp==5.1.1
+annotated-types==0.6.0
+anyio==4.0.0
+appnope==0.1.4
+APScheduler==3.10.4
+asttokens==2.4.0
+attrs==23.1.0
+Babel==2.9.1
+backcall==0.2.0
+bandit==1.7.5
+base58==0.2.5
+beautifulsoup4==4.12.2
+billiard==4.2.0
+blinker==1.6.2
+boto3==1.23.10
+botocore==1.26.10
+bs4==0.0.2
+build==0.10.0
+business-calendar==0.2.1
+CacheControl==0.13.1
+cachetools==5.3.3
+callee==0.3.1
+cbor2==5.6.5
+celery==5.3.6
+celery-enqueue==1.0.1
+certifi==2023.7.22
+cffi==1.16.0
+charset-normalizer==3.3.0
+clamd==1.0.2
+cleo==2.0.1
+click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
+coverage==7.2.7
+crashtest==0.4.1
+cryptography==42.0.4
+decorator==5.1.1
+dirty-equals==0.6.0
+distlib==0.3.7
+dnspython==2.4.2
+docusign-esign==3.23.0
+dulwich==0.21.6
+email-validator==2.0.0.post2
+execnet==2.0.2
+executing==2.0.0
+factory-boy==3.2.1
+Faker==22.2.0
+feedparser==6.0.11
+fido2==1.2.0
+filelock==3.12.4
+flasgger==0.9.7.1
+Flask==3.0.3
+flask-accept==0.0.6
+Flask-Cors==3.0.10
+Flask-JWT-Extended==4.6.0
+Flask-Login==0.6.3
+Flask-Migrate==3.0.1
+flask-shell-ipython==0.5.1
+Flask-SQLAlchemy==3.1.1
+flask-swagger==0.2.14
+Flask-Uploads==0.2.1
+Flask-WTF==1.1.2
+freezegun==1.2.2
+future==0.18.3
+gitdb==4.0.10
+GitPython==3.1.41
+google-api-core==2.19.0
+google-api-python-client==1.6.7
+google-auth==2.30.0
+google-auth-httplib2==0.2.0
+googleapis-common-protos==1.63.1
+greenlet==3.0.0
+h11==0.14.0
+h2==4.1.0
+honcho==0.7.1
+hpack==4.0.0
+httpcore==0.16.3
+httplib2==0.22.0
+httpx==0.23.3
+hubspot-api-client==8.2.1
+hyperframe==6.0.1
+idna==3.4
+importlib-metadata==6.8.0
+infinity==1.5
+inflect==1.0.2
+iniconfig==2.0.0
+installer==0.7.0
+intervals==0.9.2
+invoke==2.2.0
+ipdb==0.13.13
+ipython==8.16.1
+isodate==0.6.1
+itsdangerous==2.1.2
+jaraco.classes==3.3.0
+jedi==0.19.1
+Jinja2==3.1.3
+jmespath==1.0.1
+joblib==1.3.2
+jsonschema==4.19.1
+jsonschema-path==0.3.2
+jsonschema-specifications==2023.7.1
+keyring==24.2.0
+kombu==5.3.7
+lazy-object-proxy==1.9.0
+lxml==4.9.3
+Mako==1.2.4
+markdown-it-py==3.0.0
+MarkupSafe==2.1.3
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+mistune==3.0.2
+mock==5.1.0
+more-itertools==10.1.0
+msgpack==1.0.7
+mypy==1.11.1
+mypy-extensions==1.0.0
+ndg-httpsclient==0.4.4
+netaddr==0.7.20
+nltk==3.8.1
+nose==1.3.7
+nostr==0.0.2
+numpy==1.26.4
+oauth2client==4.1.3
+onetimepass==1.0.1
+openapi-core==0.19.0
+openapi-schema-validator==0.6.1
+openapi-spec-validator==0.7.1
+packaging==23.2
+parse==1.19.1
+parso==0.8.3
+pathable==0.4.3
+pbr==5.11.1
+pdpyras==4.0
+pexpect==4.8.0
+phonenumbers==8.13.4
+pickleshare==0.7.5
+pillow==10.2.0
+pipenv==2023.12.1
+pkginfo==1.9.6
+plaid-python==2.0.3
+platformdirs==3.11.0
+pluggy==1.3.0
+poetry==1.6.1
+poetry-core==1.7.0
+poetry-plugin-export==1.5.0
+polyfactory==2.9.0
+prometheus-client==0.19.0
+prometheus-flask-exporter==0.23.0
+prompt-toolkit==3.0.39
+proto-plus==1.23.0
+protobuf==3.18.3
+psycopg2==2.9.9
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.21
+pydantic==2.4.2
+pydantic_core==2.10.1
+pydocusign==2.2
+Pygments==2.16.1
+PyJWT==2.8.0
+pymacaroons==0.13.0
+PyNaCl==1.5.0
+pynose==1.5.1
+pyOpenSSL==24.0.0
+pyparsing==3.1.1
+pypdf==4.2.0
+pyproject_hooks==1.0.0
+pyrsistent==0.19.3
+pytest==7.3.2
+pytest-cov==4.1.0
+pytest-html-reporter==0.2.9
+pytest-xdist==3.3.1
+python-dateutil==2.8.2
 python-dotenv==1.0.1
-requests==2.32.3
-sniffio==1.3.1
-starlette==0.46.0
+python-gitlab==4.9.0
+python-http-client==3.3.7
+python-ldap==3.4.3
+pytz==2023.3.post1
+PyYAML==6.0.1
+rapidfuzz==2.15.2
+referencing==0.30.2
+regex==2023.12.25
+requests==2.31.0
+requests-mock==1.11.0
+requests-toolbelt==1.0.0
+responses==0.17.0
+respx==0.20.2
+rfc3339-validator==0.1.4
+rfc3986==1.5.0
+rich==13.6.0
+riemann-client==6.5.0
+rpds-py==0.10.3
+rsa==4.9
+ruff==0.3.5
+s3transfer==0.5.2
+scikit-learn==1.4.1.post1
+scipy==1.12.0
+secp256k1==0.14.0
+sendgrid==6.1.3
+sgmllib3k==1.0.0
+shellingham==1.5.3
+signxml==3.2.1
+simplejson==3.10.0
+six==1.16.0
+smmap==5.0.1
+sniffio==1.3.0
+soupsieve==2.5
+SQLAlchemy==2.0.35
+stack-data==0.6.3
+stevedore==5.1.0
+stripe==8.10.0
+structlog==24.1.0
+svcs==24.1.0
+threadpoolctl==3.3.0
+timeago==1.0.16
+tomlkit==0.12.1
+tqdm==4.66.1
+traitlets==5.11.2
+transitions==0.9.0
+trove-classifiers==2023.9.19
+types-beautifulsoup4==4.12.0.20240229
+types-cachetools==5.3.0.7
+types-html5lib==1.1.11.20240228
+types-mock==5.1.0.20240425
+types-python-dateutil==2.8.19.14
+types-pytz==2023.3.1.1
+types-PyYAML==6.0.12.12
+types-requests==2.31.0.6
+types-simplejson==3.19.0.2
+types-urllib3==1.26.25.14
 typing_extensions==4.12.2
-urllib3==2.3.0
+tzdata==2024.1
+tzlocal==5.2
+unchained-buidl==0.3.6
+unchained-python-utils==0.2.1
+uritemplate==3.0.1
+urllib3==1.26.18
+uv==0.1.24
+uvicorn==0.34.0
+uWSGI==2.0.25.1
+validators==0.22.0
+vine==5.1.0
+virtualenv==20.24.5
+watchdog==3.0.0
+watchfiles==0.22.0
+wcwidth==0.2.8
+websocket-client==0.44.0
+Werkzeug==3.0.4
+WTForms==2.3.3
+WTForms-Components==0.10.5
+WTForms-JSON==0.3.5
+xattr==0.10.1
+zipp==3.17.0
