--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ MAILGUN_API_KEY=key-xxxxxxxxxxxxxxxx
 MAILGUN_DOMAIN=sandbox1234.mailgun.org
 KINDLE_EMAIL=your-kindle-email@kindle.com
 FROM_EMAIL=your-email@yourdomain.com
+GMAIL_USER=your-email@gmail.com
+GMAIL_APP_PASSWORD=your-app-password
